# keri-coop

./: .gitignore  404.html  LICENSE  README.md  cabal.project  flake.nix  index.html  justfile  keri-coop.cabal  package-lock.json  package.json  sitemap.xml  spago.yaml
.github/workflows/: ci.yml  docs.yml
app/: Main.hs
architecture/: index.html
client/: .spec-results  package-lock.json  package.json  spago.yaml
client/src/: Main.purs
client/src/Domain/: Event.purs  State.purs  Types.purs  Validate.purs
client/src/FFI/: Base64Url.js  Blake3.js  Blake3.purs  Fetch.js  Fetch.purs  Storage.js  Storage.purs  TextEncoder.js  TweetNaCl.js  TweetNaCl.purs  Uint8Array.js  Uint8Array.purs  WebSocket.js  WebSocket.purs
client/src/Json/: Canonical.js  Canonical.purs
client/src/Keri/: Event.purs  KeyState.purs
client/src/Protocol/: Client.js  Client.purs  Message.purs
client/src/View/: App.purs  Dashboard.purs  Identity.purs  Members.purs  Purchase.purs  Types.purs  Wallet.purs
client/test/Test/: Main.purs
docs/: mkdocs.yml
docs/docs/: architecture.it.md  architecture.md  domain.it.md  domain.md  index.it.md  index.md  keri-integration.it.md  keri-integration.md  keri-protocol.it.md  keri-protocol.md
domain/: index.html
it/: index.html
it/architecture/: index.html
it/domain/: index.html
it/keri-integration/: index.html
it/keri-protocol/: index.html
javascripts/: mermaid.mjs
keri-integration/: index.html
keri-protocol/: index.html
lib/KeriCoop/: Server.hs
lib/KeriCoop/Server/: Api.hs  Database.hs  WebSocket.hs
nix/: docker-image.nix  project.nix
src/FFI/: Base64Url.purs  TextEncoder.purs
src/Keri/: Cesr.purs  Crypto.purs  Kel.purs
src/Keri/Cesr/: Decode.purs  DerivationCode.purs  Encode.purs
src/Keri/Crypto/: Blake3.purs  Digest.purs  Ed25519.purs  SAID.purs
src/Keri/Event/: Interaction.purs  Receipt.purs  (+3 more)
test/: Main.hs  Main.purs
test/Keri/: CesrSpec.purs  KelSpec.purs  KeyStateSpec.purs  TestHelper.purs
(+34 files in other folders)
